# english-learning-mcp

./: README-full.md  README.md  deploy.sh  deploy_with_env.sh  dynamodb_helper.py  lambda_function.py  line_notifier_lambda.py  pyproject.toml  pytest.ini  requirements.txt  samconfig.toml  template.yaml  validators.py
.github/workflows/: deploy.yml  test.yml
scripts/: send_daily_summary.sh
src/: line_notifier.py
src/english_learning_mcp/: server.py
src/english_learning_mcp/database/: db.py
tests/: __init__.py  test_dynamodb_helper.py  test_lambda_function.py  test_validators.py
