[project]
name = "english-learning-mcp"
version = "0.1.0"
description = "Serverless English learning MCP server on AWS Lambda with DynamoDB and LINE notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awslabs.mcp-lambda-handler>=0.1.8",
    "boto3>=1.35.0",
    "cryptography>=46.0.0",
    "pyjwt>=2.10.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "moto>=4.2.0",
]
dev = [
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
